# llm-tst-consistency

./: .archiveignore  .env.sample  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  run_experiment.sh
.github/workflows/: build.yaml  check.yaml
article/: main.tex  references.bib
data/: cnn_dailymail_input.txt  cnn_dailymail_input_from_dataset.txt  cnn_dailymail_settings.json  yelp_input.txt  yelp_input_from_dataset.txt  yelp_settings.json
notebooks/: llama.ipynb
reports/: report_prompt_1_cnn_dailymail.csv  report_prompt_1_yelp.csv  report_prompt_2_cnn_dailymail.csv  report_prompt_2_ifd_cnn_dailymail.csv  report_prompt_2_ifd_yelp.csv  report_prompt_2_yelp.csv
src/llm_tst_consistency/: cnn_dailymail.json  dataset_loaders.py  evaluator.py  latex.py  parameters.py  plot.py  reporting.py
src/llm_tst_consistency/hlf/: __init__.py  _hlf.py
src/llm_tst_consistency/llm/: __init__.py  _anthropic.py  _base.py  _claude3.py  _cohere.py  _gemini.py  _google.py  _llama.py  _ollama.py  _openai.py
src/llm_tst_consistency/stats/: __init__.py  _stats.py
src/llm_tst_consistency/templates/: avg_verbs_per_word.j2  corrected_adjective_variation.j2  corrected_verb_variation.j2  grade_level.j2  kuperman_age.j2  number_of_unique_adjectives.j2  number_of_unique_verbs.j2  prompt_1.j2  prompt_2.j2  simple_type_token_ratio.j2  total_named_entities.j2  total_sentences.j2  total_unique_adjectives.j2  total_unique_words.j2  total_words.j2
