[tool.poetry]
name = "llm-tst-consistency"
version = "0.1.0"
description = ""
authors = ["Andrei Olar <andrei.olar@ubbcluj.ro>"]
readme = "README.md"
packages = [{include = "llm_tst_consistency", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
ollama = "^0.2.0"
openai = "^1.30.5"
jinja2 = "^3.1.4"
datasets = "^2.19.2"
lftk = "^1.0.9"
plotly = "^5.22.0"
orjson = "^3.10.3"
scipy = "^1.13.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
